# sdks

./: .gitignore  README.md
cli/: .goreleaser.yaml  go.mod  go.sum  main.go
cli/cmd/: api.go  auth.go  balance.go  chat.go  config.go  deposit.go  keys.go  logs.go  models.go  root.go  transactions.go  usage.go
cli/internal/client/: auth.go  client.go  streaming.go
cli/internal/config/: config.go
cli/internal/output/: color.go  format.go  table.go
cli/internal/version/: version.go
mcp/: package-lock.json  package.json  tsconfig.json
mcp/src/: auth.ts  client.ts  index.ts  server.ts  types.ts
mcp/src/tools/: account.ts  billing.ts  chat.ts  deposit.ts  embeddings.ts  index.ts  keys.ts  messages.ts  models.ts  usage.ts
mcp/tests/: tools.test.ts
python/: pyproject.toml
python/src/azex/: __init__.py  _client.py  _config.py  _errors.py  _pagination.py  _streaming.py
python/src/azex/resources/: __init__.py  billing.py  chat.py  checkout.py  completions.py  deposit.py  embeddings.py  keys.py  messages.py  models.py  usage.py
python/src/azex/types/: __init__.py  billing.py  chat.py  deposit.py  keys.py  messages.py  models.py  shared.py  usage.py
python/tests/: test_billing.py  test_chat.py  test_keys.py  test_messages.py  test_streaming.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  config.ts  errors.ts  index.ts  pagination.ts  streaming.ts
typescript/src/resources/: billing.ts  chat.ts  checkout.ts  completions.ts  (+6 more)
typescript/tests/: test_billing.ts  test_chat.ts  test_keys.ts  test_streaming.ts
(+9 files in other folders)
