[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azex"
version = "0.1.0"
description = "Azex Python SDK — crypto-native LLM API platform"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Azex", email = "sdk@azex.ai" }]
keywords = ["llm", "ai", "crypto", "openai", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "anyio>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/azex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
